--- a/conf/application.conf
+++ b/conf/application.conf
@@ -271,7 +271,7 @@ play.filters {
     #permittedCrossDomainPolicies = "master-only"
 
     # The Content-Security-Policy header. If null, the header is not set.
-    #contentSecurityPolicy = "default-src 'self'"
+    contentSecurityPolicy = null #FIX ME: Add correct content security policy dependign on your application. Defaul: "default-src 'self'"
   }
 
   ## Allowed hosts filter configuration
