--- a/ui/package.json
+++ b/ui/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start": "ng serve --open --proxy-config proxy.conf.json",
+    "start": "ng serve --open --proxy-config proxy.conf.json --host 0.0.0.0",
     "test-no-watch": "ng test --single-run",
     "build-dev": "ng build --progress --output-path ../public/ui",
     "build-prod": "ng build --extract-css --progress --prod --aot --output-path ../public/ui"
